--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="unit xs-1 s-1 m-1-2 l-1-4">
       <a class="hover-box block relative chop" href="#">
         <div class="embed embed-3by2">
-          <img class="hover-box-img embed-item" scr="images/orange.jpg" alt="">
+          <img class="hover-box-img embed-item" src="images/orange.jpg" alt="">
         </div>
         <div class="hover-box-caption island-1-4 w-1 absolute">
           <h2 class="giga push-0 not-bold">Orange butterflies</h2>
@@ -28,7 +28,7 @@
     <div class="unit xs-1 s-1 m-1-2 l-1-4">
       <a class="hover-box block relative chop" href="#">
         <div class="embed embed-3by2">
-          <img class="hover-box-img embed-item" scr="images/black.jpg" alt="">
+          <img class="hover-box-img embed-item" src="images/black.jpg" alt="">
         </div>
         <div class="hover-box-caption island-1-4 w-1 absolute">
           <h2 class="giga push-0 not-bold">Black butterflies</h2>
@@ -39,7 +39,7 @@
     <div class="unit xs-1 s-1 m-1-2 l-1-4">
       <a class="hover-box block relative chop" href="#">
         <div class="embed embed-3by2">
-          <img class="hover-box-img embed-item" scr="images/blue.jpg" alt="">
+          <img class="hover-box-img embed-item" src="images/blue.jpg" alt="">
         </div>
         <div class="hover-box-caption island-1-4 w-1 absolute">
           <h2 class="giga push-0 not-bold">Blue butterflies</h2>
