--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="unit xs-1 s-1 m-1-2 l-1-4">
       <a class="hover-box block relative chop" href="#">
         <div class="embed embed-3by2">
-          <img class="hover-box-img embed-item" scr="images/yellow.jpg" alt="">
+          <img class="hover-box-img embed-item" src="images/yellow.jpg" alt="">
         </div>
         <div class="hover-box-caption island-1-4 w-1 absolute">
           <h2 class="giga push-0 not-bold">Yellow butterflies</h2>
